# shortner

./: Cargo.toml  README.md  db.json
.github/workflows/: release.yml
src/: actions.rs  db.rs  main.rs  routes.rs
