[package]
name = "shortner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
warp = "0.3.6"
serde = { version = "1.0.190", features = ["derive"]}
serde_json = "1.0.107"
serde_derive = "1.0.190"
tokio = { version = "1.33.0", features = ["full"]}
reqwest = "0.11.22"
